--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "yargs": "^15.3.1"
   },
   "devDependencies": {
-    "@midwayjs/cli": "^1.0.0",
     "@midwayjs/core": "beta",
+    "@midwayjs/decorator": "beta",
     "@midwayjs/glob": "^1.0.6",
     "@types/jest": "^26.0.10",
     "@types/node": "14",
