--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@midwayjs/bundle-helper",
   "version": "1.0.2",
   "description": "generate midway bundle entry file",
+  "main": "dist/index.js",
   "bin": {
     "bundle": "bin/bundle.js"
   },
@@ -16,19 +17,18 @@
     "dist/**/*.js",
     "dist/**/*.d.ts"
   ],
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@midwayjs/core": "beta",
-    "@midwayjs/decorator": "beta",
+    "@midwayjs/core": "3.2.0",
+    "@midwayjs/decorator": "3.1.6",
     "@midwayjs/glob": "^1.0.6",
-    "@types/jest": "^26.0.10",
-    "@types/node": "14",
-    "cross-env": "^6.0.0",
-    "jest": "^26.4.0",
-    "mwts": "^1.0.5",
-    "ts-jest": "^26.2.0",
-    "typescript": "^4.0.0"
+    "@types/jest": "^27.4.1",
+    "@types/node": "17.0.23",
+    "cross-env": "^7.0.3",
+    "jest": "^27.5.1",
+    "mwts": "^1.3.0",
+    "ts-jest": "^27.1.4",
+    "typescript": "^4.6.3"
   },
   "engines": {
     "node": ">=12.0.0"
