--- a/.github/workflows/ts.yml
+++ b/.github/workflows/ts.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: Typescript Compatible CI
 
 on: [push, pull_request]
 
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [16.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -19,7 +19,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install && npm install codecov
     - run: npm run build --if-present
-    - run: npm run cov
+    - run: ./scripts/test.sh
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
 
