--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dist/**/*.js",
     "dist/**/*.d.ts"
   ],
-  "dependencies": {},
+  "dependencies": {
+
+  },
   "devDependencies": {
     "@midwayjs/core": "^3.2.0",
     "@midwayjs/decorator": "^3.1.6",
@@ -28,7 +30,8 @@
     "jest": "^27.5.1",
     "mwts": "^1.3.0",
     "ts-jest": "^27.1.4",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "sequelize-typescript": "^2.1.5"
   },
   "engines": {
     "node": ">=12.0.0"
