--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@midwayjs/bundle-helper",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "generate midway bundle entry file",
   "main": "dist/index.js",
   "bin": {
@@ -17,9 +17,7 @@
     "dist/**/*.js",
     "dist/**/*.d.ts"
   ],
-  "dependencies": {
-
-  },
+  "dependencies": {},
   "devDependencies": {
     "@midwayjs/core": "^3.2.0",
     "@midwayjs/decorator": "^3.1.6",
